--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get: ^4.7.2
   google_fonts: ^6.2.1
   pin_code_fields: ^8.0.1
   go_router: ^16.3.0
@@ -42,6 +41,14 @@ dependencies:
   qr_flutter: ^4.1.0
   get_storage: ^2.1.1
   font_awesome_flutter: ^10.10.0 
+  flutter_svg: ^2.2.3
+  dio: ^5.9.0
+  jwt_decode: ^0.3.1
+  bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
+  get_x: ^5.0.0
+  shared_preferences: ^2.5.4
+  flutter_secure_storage: ^10.0.0
 
 dev_dependencies:
   flutter_test:
